<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/StyleScrollView"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.android.quiz.Question6Activity">

    <LinearLayout style="@style/StyleLinearLayoutTop">

        <TextView
            android:id="@+id/timer6"
            style="@style/StyleTimer" />

        <TextView
            style="@style/StyleQuestion"
            android:text="@string/question6" />

        <RadioGroup
            android:id="@+id/question6answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/StyleRadioGroup">

            <RadioButton
                android:id="@+id/question6answer1"
                style="@style/StyleRadioButton"
                android:text="@string/question6answer1" />

            <RadioButton
                android:id="@+id/question6answer2"
                style="@style/StyleRadioButton"
                android:text="@string/question6answer2" />

            <RadioButton
                android:id="@+id/question6answer3"
                style="@style/StyleRadioButton"
                android:text="@string/question6answer3" />

            <RadioButton
                android:id="@+id/question6answer4"
                style="@style/StyleRadioButton"
                android:text="@string/question6answer4" />
        </RadioGroup>

        <Button
            style="@style/StyleButton"
            android:layout_gravity="center"
            android:onClick="question7"
            android:text="@string/next" />

    </LinearLayout>
</ScrollView>