<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/StyleScrollView"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.android.quiz.Question10Activity">

    <LinearLayout style="@style/StyleLinearLayoutTop">

        <TextView
            android:id="@+id/timer10"
            style="@style/StyleTimer" />

        <TextView
            style="@style/StyleQuestion"
            android:text="@string/question10" />

        <CheckBox
            android:id="@+id/question10answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question10anwer1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText"
            android:theme="@style/CheckBoxStyle" />

        <CheckBox
            android:id="@+id/question10answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question10answer2"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText"
            android:theme="@style/CheckBoxStyle" />

        <CheckBox
            android:id="@+id/question10answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question10answer3"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText"
            android:theme="@style/CheckBoxStyle" />

        <CheckBox
            android:id="@+id/question10answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question10answer4"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText"
            android:theme="@style/CheckBoxStyle" />

        <Button
            style="@style/StyleButton"
            android:layout_gravity="center"
            android:onClick="showResult"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>