<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/timer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_low"
            android:gravity="center"
            android:textColor="@color/timer_color"
            android:textSize="@dimen/activity_textsize_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_low"
            android:background="@drawable/shape_questions"
            android:text="@string/question3"
            android:textColor="@color/colorText"
            android:textSize="@dimen/activity_textsize_low" />

        <RadioGroup
            android:id="@+id/question3answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/radioButtonStyle">

            <RadioButton
                android:id="@+id/question3answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3answer1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorText" />

            <RadioButton
                android:id="@+id/question3answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3answer2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorText" />

            <RadioButton
                android:id="@+id/question3answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3anwer3"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorText" />

            <RadioButton
                android:id="@+id/question3answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3answer4"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorText" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="question4"
            android:text="@string/next"
            android:textSize="@dimen/activity_textsize_low" />


    </LinearLayout>
</ScrollView>