<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_low"
            android:gravity="center"
            android:textColor="@color/timer_color"
            android:textSize="@dimen/activity_textsize_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_low"
            android:background="@drawable/shape_questions"
            android:text="@string/question5"
            android:textColor="@color/colorText"
            android:textSize="@dimen/activity_textsize_low" />


        <EditText
            android:id="@+id/question5answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/answer"
            android:inputType="numberDecimal"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:textSize="@dimen/activity_textsize_low" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="question6"
            android:text="@string/next"
            android:textSize="@dimen/activity_textsize_low" />


    </LinearLayout>
</ScrollView>